[gd_scene load_steps=8 format=3 uid="uid://8u238p434ue7"]

[ext_resource type="Texture2D" uid="uid://8sogx3brbo7f" path="res://Game/Images/water_clean.png" id="1_ec0cd"]
[ext_resource type="Script" uid="uid://c8hi32r8lvisy" path="res://Game/Scripts/lake.gd" id="1_ioqqi"]
[ext_resource type="Texture2D" uid="uid://bfdkgxptt176x" path="res://Game/Images/water_dirty.png" id="2_ioqqi"]
[ext_resource type="Texture2D" uid="uid://djhgh6aj4frke" path="res://Game/Images/water_empty.png" id="4_srecf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_srecf"]
size = Vector2(2284, 509)

[sub_resource type="SpriteFrames" id="SpriteFrames_in8jx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_ec0cd")
}],
"loop": true,
"name": &"0",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_ioqqi")
}],
"loop": true,
"name": &"3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_srecf")
}],
"loop": true,
"name": &"5",
"speed": 5.0
}]

[sub_resource type="AudioStreamWAV" id="AudioStreamWAV_ioqqi"]

[node name="Lake" type="Node2D"]
script = ExtResource("1_ioqqi")

[node name="Lake_Area" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="Lake_Collision" type="CollisionShape2D" parent="Lake_Area"]
position = Vector2(-5, -26.5)
shape = SubResource("RectangleShape2D_srecf")

[node name="Lake_Sprite" type="AnimatedSprite2D" parent="Lake_Area"]
sprite_frames = SubResource("SpriteFrames_in8jx")
animation = &"0"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamWAV_ioqqi")
